2009-07-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/FindInFilesDialog.cs: Fixed "Bug
	  520269 - Stop button is now useless".

2009-07-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
	  Track API changes.

2009-07-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
	  Fixed dispose of completion texteditor extension.

2009-07-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
	  Fixed "Bug 518548 - Completion is very annoying on lambda
	  parameters".

2009-07-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/FindReplace.cs:
	* MonoDevelop.Ide.FindInFiles/FileProvider.cs: Fixed "replace"
	  feature.

2009-07-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Commands/ProjectCommands.cs:
	* MonoDevelop.Ide.Execution/CustomExecutionMode.cs:
	* MonoDevelop.Ide.Execution/IExecutionModeEditor.cs:
	* MonoDevelop.Ide.Execution/CustomArgsCustomizer.cs:
	* MonoDevelop.Ide.Execution/CommandExecutionContext.cs:
	* MonoDevelop.Ide.Execution/CustomArgsExecutionMode.cs:
	* MonoDevelop.Ide.Gui.Components/ExecutionModeComboBox.cs:
	* MonoDevelop.Ide.Gui.Dialogs/CustomExecutionModeWidget.cs:
	* MonoDevelop.Ide.Gui.Dialogs/CustomExecutionModeDialog.cs:
	* MonoDevelop.Ide.Execution/ExecutionModeCommandService.cs:
	* MonoDevelop.Ide.Execution/IExecutionCommandCustomizer.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs:
	* MonoDevelop.Ide.Execution/IExecutionConfigurationEditor.cs:
	* MonoDevelop.Ide.Execution/ParameterizedExecutionHandler.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Components.ExecutionModeComboBox.cs:
	* MonoDevelop.Ide.Gui.Dialogs/CustomExecutionModeManagerDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.CustomExecutionModeWidget.cs: