@@ -1,5 +1,12 @@
 2009-07-21  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Ide.addin.xml:
+	* MonoDevelop.Ide.Commands/ViewCommands.cs: Implemented "Bug
+	  445699 - key binding for focusing text editor from
+	  controls".
+
+2009-07-21  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Ide.FindInFiles/FindInFilesDialog.cs: Fixed "Bug
 	  520269 - Stop button is now useless".
 
